--- a/work_OD.Rmd
+++ b/work_OD.Rmd
@@ -43,6 +43,8 @@ library(plotly)
 
 # https://stackoverflow.com/questions/55702377/ggplot2-doesnt-show-chinese-character-properly-in-rstudio-server-in-docker
 library(showtext)
+
+library(rayshader)
 ```
 
 
@@ -78,6 +80,8 @@ Encoding(work_OD$place_of_residence) <- "UTF-8"
 # Add categorial variables
 
 ```{r}
+METROPOLITAN_AREAS = c("Central and Western", "Wan Chai", "Eastern", "Southern", "Yau Tsim Mong", "Sham Shui Po", "Kowloon City", "Wong Tai Sin", "Kwun Tong", "Kwai Tsing", "Tsuen Wan", "Kwai Chung New Town", "Tsuen Wan New Town", "Tsing Yi New Town")
+
 work_OD_order = work_OD_chi %>%
   mutate(
     residence_area = case_when(
@@ -95,11 +99,14 @@ work_OD_order = work_OD_chi %>%
       place_of_work %in% c("North Lantau New Town") ~ "I",
       place_of_work %in% c("Other areas in the New Territories") ~ "NT_Others",
       place_of_work %in% c("No fixed places of work in Hong Kong/ Marine/ Work at home/ Places outside Hong Kong") ~ "Others",
-    )
+    ),
+    residence_district = ifelse(place_of_residence %in% METROPOLITAN_AREAS, "MA", "NT"),
+    work_district = ifelse(place_of_work %in% METROPOLITAN_AREAS, "MA", "NT"),
   ) %>%
   mutate(
     travel_dir = paste0(residence_area,  " to ", work_area),
-    same_work_area = ifelse(residence_area == work_area, TRUE, FALSE)
+    same_work_area = ifelse(residence_area == work_area, TRUE, FALSE),
+    is_cross_ma_nt = ifelse(residence_district != work_district, TRUE, FALSE)
   )
 
 ```
@@ -326,11 +333,12 @@ cross_travel_type_rmspecial = cross_travel_type %>%
 
 ```{r}
 cross_travel_type_rmspecial %>%
-  group_by(jounrney_type_mostsim) %>%
+  group_by(is_cross_ma_nt) %>%
   summarise(
     total_N = sum(N_workers)
   )
 ```
+
 
 
 ```{r}
@@ -365,6 +373,40 @@ OD_work_alluvial_travelcolour
 ggsave("OD_work_alluvial_travelcolour.png", width = 150, height = 450, units = "mm")
 ```
 
+```{r}
+MA_NT_PALETTE = c("FALSE" = "#377eb8", "TRUE" = "#e25a61")
+
+OD_work_alluvial_travelcolour_mant = ggplot(cross_travel_type_rmspecial, aes(y = N_workers, axis1 = place_of_residence, axis2 = place_of_work)) +
+  geom_alluvium(aes(fill = is_cross_ma_nt), width = .2, alpha = .4) +
+  geom_stratum(width = .2, fill = "#EEEEEE", color = "#FFFFFF") +
+  # http://corybrunson.github.io/ggalluvial/reference/stat_stratum.html
+  # https://stackoverflow.com/questions/29465941/format-number-in-r-with-both-comma-thousands-separator-and-specified-decimals
+  geom_text(stat = "stratum", aes(label = paste0(after_stat(stratum), "\n", after_stat(format(count, big.mark=",")))), size = 2) +
+  scale_x_discrete(limits = c("Place of \nResidence", "Place of \nWork"), expand = c(.05, .05), position = "top") +
+  scale_fill_manual(values = MA_NT_PALETTE, aesthetics = c("colour", "fill")) +
+  # scale_fill_brewer(type = "qual", palette = "Set1") +
+  theme_void() +
+  theme(
+    axis.text.x = element_text(size = 12),
+    legend.position = "None",
+    aspect.ratio = 3/1
+  ) +
+  labs(
+    title = "Flow of commuters",
+    subtitle = "Place of residence and work of commuters in Hong Kong",
+    caption = "Note: workers with no fixed places of work or \nwork in Marine/at home/in places outside Hong Kong are excluded."
+  )
+
+OD_work_alluvial_travelcolour_mant
+```
+
+```{r}
+ggsave("OD_work_alluvial_travelcolour_mant.svg", width = 150, height = 450, units = "mm")
+
+```
+
+
+
 ## Heatmap
 
 ```{r}
@@ -373,7 +415,7 @@ WORKPLACE_ORDER_SIM = c("Central and Western", "Wan Chai", "Eastern", "Southern"
 cross_travel_type_rmspecial_simlabel = cross_travel_type_rmspecial %>%
   mutate(
     place_of_work_sim = ifelse(place_of_work == "Other areas in the New Territories", "Others", str_replace(place_of_work, "New Town", "NT"))
-  )
+  ) %>%
   mutate(
     place_of_work_sim = factor(place_of_work_sim, WORKPLACE_ORDER_SIM)
   )
@@ -381,13 +423,16 @@ cross_travel_type_rmspecial_simlabel = cross_travel_type_rmspecial %>%
 
 
 ```{r}
-ggplot(cross_travel_type_rmspecial_simlabel, aes(x = place_of_work_sim, y = fct_rev(place_of_residence), fill = N_workers)) +
+od_workers_plot = ggplot(cross_travel_type_rmspecial_simlabel, aes(x = place_of_work_sim, y = fct_rev(place_of_residence), fill = N_workers)) +
   geom_tile(color = "#EEEEEE", size = 1) +
+  geom_vline(xintercept = c(4.5, 9.5, 21.5), color = "green") +
+  geom_hline(yintercept = c(9.5, 14.5), color = "blue") +
   scale_fill_viridis_c(option = "A", direction = -1, trans = "log") +
   scale_x_discrete(position = "top") +
   theme_bw() +
   theme(
-    axis.text.x = element_text(angle = 90, vjust = -1, hjust = 0)
+    axis.text.x = element_text(angle = 90, vjust = -1, hjust = 0),
+    aspect.ratio = 18/22
   ) +
   labs(
     y = "Place of residence",
@@ -395,8 +440,21 @@ ggplot(cross_travel_type_rmspecial_simlabel, aes(x = place_of_work_sim, y = fct_
     title = "The OD of workers"
   )
   
+od_workers_plot
 ```
 
+```{r}
+ggsave("od_workers_plot.svg", dpi = 300)
+```
+
+
+## rayshader test
+
+```{r}
+plot_gg(od_workers_plot, width = 15, height = 5)
+
+render_snapshot()
+```
 
 
 ## Sankey Network
